Optimize CPU and Heap perfs on queries